Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21056

Find/Replace with regular expression can be slow

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • Qt Creator 4.7.0, Qt Creator 9.0.0-rc1
    • Editors
    • None
    • Linux/X11
    • c10600134f (qt-creator/qt-creator/master)

    Description

      Steps to reproduce:

      • In the attached file, try to Replace 'not found\..*$' by '' or some string

      Observed:
      When typing in the regex, it tries to highlight the matches, which slows it down

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes