Editor: do not paint rounded corners in editor overlay

Calculating and optimizing a painter path with rounded corners can
freeze or under certain circumstances even crash Qt Creator. Since we
are using a less rounded design nowadays anyways we can also cut this
overhead.

Fixes: QTCREATORBUG-21056
Change-Id: I9cd5eaea00ab040d529f51ea6d2f337dd0a1f6b8
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>